--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -6,7 +6,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
 
-<SCRIPT language="JavaScript" type="text/javascript" src="http://toxic.berkeley.edu/bpederse/kaj/kaj.stable.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
 <SCRIPT language="JavaScript">
 
 kaj.pollute();
