--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -47,7 +47,7 @@ function get_anno_chain (val1, val2) {
 <BODY>
 <TABLE>
  <TR>
-  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/CoGe-logo.png' border=0></a>
+  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/GeLo-logo.png' border=0></a>
   <TD id="title"><font class="title"><TMPL_VAR NAME=TITLE></font></td>
  </TR>
 </TABLE>
