added e-mail contact

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -97,5 +97,8 @@
 <DIV>
 <font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE></font>
 </DIV>
+<DIV>
+<font class = "xsmall">Please e-mail Eric Lyons (elyons(@t)nature.berkeley.edu) with any comments, questions, or bugs</font>
+</DIV>
 </BODY>
 </HTML>
