corrected minor fomatting error

--- a/web/tmpl/B2V_results.tmpl
+++ b/web/tmpl/B2V_results.tmpl
@@ -4,12 +4,11 @@
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
-
 <TABLE class="plain" cellspacing="0" cellpadding="0" border=0 >
 <TR>
   <TD width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></TD>
   <TD width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</TD>
-  <TD width="100%"  background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique"><TMPL_VAR NAME=HEADING></font></TD>
+  <TD   background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique"><TMPL_VAR NAME=HEADING></font></TD>
   <TD width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</TD>
   <TD width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></TD>
  </TR>
