--- a/web/tmpl/B2V.tmpl
+++ b/web/tmpl/B2V.tmpl
@@ -108,57 +108,7 @@ function changeColor(id, color) {
   </DIV>
   </DIV>
  </TR>
-<!--
- <TR>
-  <TH colspan="2">
-   <DIV class="mainDiv" >
-   <DIV id="usf" class="topItem" onMouseOver="Init(this); changeColor('usf','#000099'); " onMouseOut="changeColor('usf','#009900');">Upload Sequence File(s):</DIV>
-   <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:none;" >
-     <TABLE style="width: 100%;">
-      <TR>
-      <TD>
-      <TABLE>
-       <TR>
-        <TD>File:
-        <TD><input class="backbox" type="file" name="seq_file1" id="seq_file1" tabindex="1"  />
-      <TR>
-	<TD><DIV class="small">Start Position:</DIV>
-      	<TD><input class="backbox" type="text" name="f1start" id="f1start" tabindex="1" size="10" value="1" /></TD>
-      <TR>
-       <TD><DIV class="small">Upstream:</DIV>
-       <TD><input class="backbox" type="text" name="f1up" id="f1up" tabindex="1" size="10" value="0" />
-      <TR>
-       <TD><DIV class="small">Downstream:</DIV>
-       <TD><input class="backbox" type="text" name="f1down" id="f1down" tabindex="1" size="10"  value=""/>
-      </TABLE>
-      <TD>
-      <TABLE>
-       <TR>
-        <TD>File:
-        <TD><input class="backbox" type="file" name="seq_file2" id="seq_file2" tabindex="1"  />
-      <TR>
-	<TD><DIV class="small">Start Position:</DIV>
-      	<TD><input class="backbox" type="text" name="f2start" id="f2start" tabindex="1" size="10" value="1" /></TD>
-      <TR>
-       <TD><DIV class="small">Upstream:</DIV>
-       <TD><input class="backbox" type="text" name="f2up" id="f2up" tabindex="1" size="10" value="0" />
-      <TR>
-       <TD><DIV class="small">Downstream:</DIV>
-       <TD><input class="backbox" type="text" name="f2down" id="f2down" tabindex="1" size="10"  value=""/>
-      </TABLE>
-     </table>
-     <span class="subItem"></span>
-     <span class="subItem"></span>
-     <span class="subItem"></span>
-     <span class="subItem"></span>
-     <span class="subItem"></span>
 
-     </DIV>
-  </DIV>
-  </DIV>		
- </TR>
--->
  <TR>
   <TH colspan="2">
    <DIV class="mainDiv" >
@@ -267,7 +217,7 @@ function changeColor(id, color) {
  <tr> 
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
   <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png" class = "oblique">Algorithm Options</td>
+  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png" class = "oblique">Additional Options</td>
   <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
  </tr>
@@ -355,6 +305,72 @@ function changeColor(id, color) {
 
 </TABLE>
 
+<TABLE class="basic" width=100%>
+ <TR>
+  <TH colspan="2">
+  <DIV class="mainDiv">
+   <DIV id="ip" class="topItem" onMouseOver="Init(this);changeColor('ip','#000099'); " onMouseOut="changeColor('ip','#009900');" >Image Parameters:</DIV>
+   <DIV class="dropMenu">
+     <DIV class="subMenu" style="display:inline;">
+     <TABLE style="width: 100%;">
+      <TR>
+      <TD>
+
+
+<TABLE class="basic">
+ <TR>
+  <TD>
+    <DIV>
+      Image Width (Pixels):
+    </DIV>
+  </TD>
+  <TD>
+    <DIV>
+	<input class="backbox" type="text" name="iw" id="iw" tabindex="1"  size="10" value="1000" />
+    </DIV>
+  </TD>
+ </TR>
+ <TR>
+  <Td>
+    <DIV>
+      Image Height (Pixels):
+    </DIV>
+  </Td>
+  <TD>
+    <DIV>
+	<input class="backbox" type="text" name="ih" id="ih" tabindex="1"  size="10" value="150" />
+    </DIV>
+  </TD>
+
+ </TR>
+ <TR>
+  <Td>
+    <DIV>
+      Feature Height (Pixels):
+    </DIV>
+  </Td>
+  <TD>
+    <DIV>
+	<input class="backbox" type="text" name="feat_h" id="feat_h" tabindex="1"  size="10" value="20" />
+    </DIV>
+  </TD>
+
+ </TR>
+         </TABLE>
+     </table>
+     <span class="subItem"></span>
+     <span class="subItem"></span>
+     <span class="subItem"></span>
+     <span class="subItem"></span>
+     </DIV>
+  </DIV>
+  </DIV>
+ </TR>
+	  
+ </TR>
+
+</TABLE>
+
 
 
 
@@ -378,14 +394,8 @@ function changeColor(id, color) {
  </tr>
 </table> 
 
-
-<!--
-onClick="run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'seq_file1', 'seq_file2', 'f1start', 'f1up', 'f1down', 'f2start', 'f2up', 'f2down', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams'],['results'], 'POST');"
-onClick="loading([], ['results']); run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams'],['results'], 'POST');"
-
--->
 <input type="button" value="GO"
-onClick="loading([], ['results']); run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams'],['results'], 'POST');"
+onClick="loading([], ['results']); run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
 >   &nbsp;&nbsp;
 
 
