minor formatting changes

--- a/web/tmpl/B2V.tmpl
+++ b/web/tmpl/B2V.tmpl
@@ -268,11 +268,12 @@ function changeColor(id, color) {
   <TH>
    Mask Exons:<br><font class="small">(Exons Masked during bl2seq run)</font>
   <TD>
-   <label><input class="backbox" type="radio" name="mask" id="mask" tabindex="22" value="1" checked/>On</label><label><input class="backbox" type="radio" name="mask" id="mask" tabindex="22" value="0" />Off</label>
+   <label><input class="backbox" type="radio" name="mask" id="mask" tabindex="22" value="1" />On</label><label><input class="backbox" type="radio" name="mask" id="mask" tabindex="22" value="0" checked/>Off</label>
  </TR>
 
         </TABLE>
      </table>
+     <span class="subItem"></span>
      <span class="subItem"></span>
      <span class="subItem"></span>
      <span class="subItem"></span>
