--- a/web/tmpl/B2V.tmpl
+++ b/web/tmpl/B2V.tmpl
@@ -140,6 +140,7 @@ function get(id){
      <span class="subItem"></span>
      <span class="subItem"></span>
      <span class="subItem"></span>
+     <span class="subItem"></span>
      </DIV>
   </DIV>
   </DIV>
