--- a/web/tmpl/B2V.tmpl
+++ b/web/tmpl/B2V.tmpl
@@ -110,7 +110,7 @@ function get(id){
       <TABLE>
        <TR>
         <TD>Name:
-        <TD><input class="backbox" type="text" name="accn1" id="accn1" tabindex="1"  size="20" onBlur="source_search(['accn1','args__1'],['org1'])" value=<TMPL_VAR NAME=ACCN1> />
+        <TD><input class="backbox" type="text" name="accn1" id="accn1" tabindex="1"  size="20" onBlur="source_search(['accn1','args__1'],['org1'])" value="<TMPL_VAR NAME=ACCN1>" />
         <DIV id="org1"><input type="hidden" id="infoid1"></DIV>
        <TR>
        <TD><DIV class="small">Upstream:</DIV>
@@ -125,7 +125,7 @@ function get(id){
       <TABLE>
        <TR>
         <TD>Name:
-        <TD><input class="backbox" type="text" name="accn2" id="accn2" tabindex="1"  size="20" onBlur="source_search(['accn2','args__2'],['org2'])" value=<TMPL_VAR NAME=ACCN2> />
+        <TD><input class="backbox" type="text" name="accn2" id="accn2" tabindex="1"  size="20" onBlur="source_search(['accn2','args__2'],['org2'])" value="<TMPL_VAR NAME=ACCN2>" />
         <DIV id="org2"><input type="hidden" id="infoid2"></DIV>
        <TR>
        <TD><DIV class="small">Upstream:</DIV>
