--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -3,13 +3,13 @@
  <TITLE><TMPL_VAR NAME=TITLE></TITLE>
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
  <link rel="stylesheet" type="text/css" href="/CoGe/css/sddm.css" />
+ <TMPL_VAR NAME=HEAD>
+
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
 
-<SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
-<SCRIPT language="JavaScript">
-kaj.pollute();
-</SCRIPT>
+<!--<SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
+<SCRIPT language="JavaScript">kaj.pollute();</SCRIPT>-->
 <BODY>
 <TABLE>
  <TR>
