--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -3,43 +3,72 @@
  <TITLE><TMPL_VAR NAME=TITLE></TITLE>
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
  <link rel="stylesheet" type="text/css" href="/CoGe/css/sddm.css" />
+
+ <link rel="stylesheet" type="text/css" href="css/tiler.css">
+ <script src=js/Dom.js> </script>
+ <script src=js/common.js> </script>
+ <script src=js/extendEvent.js> </script>
+ <script src=js/panner.js> </script>
+ <script src=js/tiler.js> </script>
+ <script src=js/tilerConfig.js> </script>
+
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
 
 <SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
 <SCRIPT language="JavaScript">
 
-kaj.pollute();
+<!--kaj.pollute();-->
 
 function accn_search_chain(val) {
  minlen = 4;
- GS('DS_title','');
- GS('FT_title','');
- if ((val == 1) && (GS('accn').length > minlen)){
+ kaj.GS('DS_title','');
+ kaj.GS('FT_title','');
+ if ((val == 1) && (kaj.GS('accn').length > minlen)){
    return;
  } else if (val == 1) {
    accn_search(['accn', "args__"+val],[source_search_chain]); 
- } else if  (GS('accn').length > minlen) {
+ } else if  (kaj.GS('accn').length > minlen) {
    accn_search(['accn', "args__"+val],[source_search_chain]); 
  }
 
 }
 
 function source_search_chain (val) {
- if (val) {GS('accn_list',val);}
+ if (val) {kaj.GS('accn_list',val);}
  source_search(['accn_select'], [get_types_chain]);
 }
 
 function get_types_chain (val1, val2) {
- if (val1) {GS('Source', val1);}
- if (val2) {GS('DS_title', "Data Version");}	
+ if (val1) {kaj.GS('Source', val1);}
+ if (val2) {kaj.GS('DS_title', "Data Version");}	
  get_types(['accn_select', 'infoid'],[get_anno_chain]);	
 }
 
 function get_anno_chain (val1, val2) {
- if (val1) {GS('FeatType', val1)};
- if (val2) {GS('FT_title', "Type Name");}
+ if (val1) {kaj.GS('FeatType', val1)};
+ if (val2) {kaj.GS('FT_title', "Type Name");}
  get_anno(['accn_select', 'infoid', 'Type_name'],['anno']);	
+}
+
+function tiler_setup (html, id)
+ {
+   kaj.GS(id,html);
+   omap = new Tiler('container',[config]);
+   var qurl = 'http://toxic.berkeley.edu/CoGe/FeatAnno.pl?';
+   addEvent(G('container'),'click',query);	
+}
+
+function query(e){
+   var xy = e.getItemXY(); 
+   xy = this.pix_to_real_world(xy[0],xy[1])[0];
+   var url = qurl + 'chr='+ G('chr').value + '&di='+G('di').value + '&loc='+ xy;
+   jfetch(url,placeanno);
+}
+
+function placeanno(stuff) {
+ //  document.info.info.value = stuff; 
+  kaj.GS('info', stuff);
 }
 
 
@@ -47,7 +76,7 @@ function get_anno_chain (val1, val2) {
 <BODY>
 <TABLE>
  <TR>
-  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/GeLo-logo.png' border=0></a>
+  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a>
   <TD id="title"><font class="title"><TMPL_VAR NAME=TITLE></font></td>
  </TR>
 </TABLE>
@@ -95,7 +124,7 @@ function get_anno_chain (val1, val2) {
 </TABLE>
 <DIV id="anno"></DIV>
 <SCRIPT language="Javascript">
-  if (GS('accn')) {accn_search_chain(0);};
+  if (kaj.GS('accn')) {accn_search_chain(0);};
 </SCRIPT>
 
 
@@ -132,6 +161,5 @@ function get_anno_chain (val1, val2) {
 <font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE></font>
 </DIV>
 <script language="JavaScript" type="text/javascript" src="/CoGe/js/menu.js"></script>
-</form>
 </BODY>
 </HTML>
