changed call to FeatAnno.pl

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -27,7 +27,7 @@ addEvent(zi,'click',function(){omap.zoom(1)});
 addEvent(G('zo'),'click',function(){omap.zoom(-1)});
 
 addEvent(G('container'),'click',query);
-var qurl = 'http://toxic.berkeley.edu/CoGe/FeatAnno.pl?';
+var qurl = '/CoGe/FeatAnno.pl?';
 
 function query(e){
    placeanno('<font class="loading">loading annotations. . .</font>'); 
