working on front page

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -1,4 +1,34 @@
 <TMPL_IF NAME="FRONT_PAGE">
+
+<script language="javascript">
+function dataset_chain() {
+ get_data_info(['org_id'],[dataset_info_chain]);
+}
+
+function dataset_info_chain(val) {
+ kaj.GS('di_info','<font class="loading">loading. . .</font>')
+ if (val) {kaj.GS('di_list', val);}
+ get_data_info_info(['di_id'],['di_info']);
+}
+
+</script>
+<TABLE>
+ <TR>
+  <TD valign=top>
+   <DIV class = "oblique">Organisms</DIV>
+   <DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
+
+  <TD valign=top>
+   <DIV class = "oblique">Datasets</DIV>
+   <DIV id="di_list"><TMPL_VAR NAME="DI_LIST"></DIV>
+
+  <TD valign=top>
+   <DIV class = "oblique">Dataset information</DIV>
+   <DIV id="di_info"><TMPL_VAR NAME="DI_INFO"></DIV>
+
+</TABLE>
+<IMG SRC = "picts/table/spacer-1x1.png" onload="dataset_chain();">
+
 <TMPL_ELSE>
 
 
