added TMPL_VAR tag for <body>

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -10,7 +10,7 @@
 
 <!--<SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
 <SCRIPT language="JavaScript">kaj.pollute();</SCRIPT>-->
-<BODY>
+<BODY TMPL_VAR NAME=BODY_TAG>
 <TABLE>
  <TR>
   <TD><a href="/CoGe" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a>
