--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -1,15 +1,28 @@
 <TMPL_IF NAME="FRONT_PAGE">
 
 <script language="javascript">
+
 function dataset_chain() {
+ kaj.GS('di_list','<font class="loading"></font>');
+ kaj.GS('di_info','<font class="loading"></font>');	
+ kaj.GS('chr_info','<font class="loading"></font>');	
  get_data_info(['org_id'],[dataset_info_chain]);
 }
 
 function dataset_info_chain(val) {
+ kaj.GS('chr_info','<font class="loading"></font>');	
  kaj.GS('di_info','<font class="loading">loading. . .</font>');
  kaj.GS('viewer','<font class="loading"></font>');
  if (val) {kaj.GS('di_list', val);}
- get_data_info_info(['di_id'],['di_info', 'viewer']);
+ get_data_info_info(['di_id'],[dataset_info_chr_chain]);
+}
+
+function dataset_info_chr_chain(val, chr) {
+ kaj.GS('chr_info','<font class="loading">loading. . .</font>');
+ kaj.GS('viewer','<font class="loading"></font>');	
+ if (val) {kaj.GS('di_info', val); kaj.GS('chr_info','');}
+ kaj.GS('chr_info','<font class="loading">searching for features. . .</font>'); 
+ get_data_info_chr_info(['di_id', 'chr'],['chr_info', 'viewer']);
 }
 
 function launch_viewer (did, chr) {
@@ -33,6 +46,7 @@ function launch_viewer (did, chr) {
   <TD valign=top>
    <DIV class = "oblique">Dataset information</DIV>
    <DIV id="di_info"><TMPL_VAR NAME="DI_INFO"></DIV>
+   <DIV id="chr_info"><TMPL_VAR NAME="CHR_INFO"></DIV>
 
 </TABLE>
 <IMG SRC = "picts/table/spacer-1x1.png" onload="dataset_chain();">
