--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -60,6 +60,13 @@ function get(id){
  </TR>
 </TABLE>
 <DIV id="results" ></DIV>
+<input type="button" value="GO"
+onClick="source_search(['accn1','args__1'],['org1']); source_search(['accn2','args__2'],['org2']); loading([], ['results']); run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
+>   &nbsp;&nbsp;
+
+
+<input type="button" value="Clear"
+ onClick="rset([],['results'])">
 <table width="100%" border="0" cellspacing="0" cellpadding="0" border=0>
  <tr> 
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
@@ -555,13 +562,20 @@ function get(id){
 </table> 
 
 <input type="button" value="GO"
-onClick="source_search(['accn1','args__1'],['org1']); source_search(['accn2','args__2'],['org2']); loading([], ['results']); run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
+onClick="source_search(['accn1','args__1'],['org1']);
+source_search(['accn2','args__2'],['org2']); loading([], ['results']);
+run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down',
+'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up',
+'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1',
+'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize',
+'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih',
+'feat_h'],['results'], 'POST'); window.scroll(0,0);"
 >   &nbsp;&nbsp;
 
 
 <input type="button" value="Clear"
  onClick="rset([],['results'])">
-
+<font class="small">(Results appear at the top of this page)</font>
 <br>
 <HR>
 <DIV>
