--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -1,41 +1,42 @@
-<HTML>
-<HEAD>
- <TITLE><TMPL_VAR NAME=TITLE></TITLE>
- <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
- <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-</HEAD>
-<BODY>
 
-<TABLE>
+<SCRIPT language="JavaScript">
+
+function place_cookie(valid, cookie, url)
+  {
+    if (valid) 
+     {
+       
+       document.cookie = cookie;
+       if (url)
+        {
+         window.location = url;
+        }
+       else {window.location.reload;}
+     }
+    else
+     {
+	kaj.GS('message','<font class="error">Invalid login</font>');       
+     }
+  }
+
+</SCRIPT>
+
+<TMPL_IF NAME="LOGIN">
+<DIV id="message"><TMPL_VAR NAME="MESSAGE"></DIV>
+<DIV class=large>Please log on: <font class="small">(You will need make sure your browser is set to accept <a href="http://en.wikipedia.org/wiki/HTTP_cookie">cookies</a>)</font>
+<TABLE class="basic">
  <TR>
-  <TD><img src='/CoGe/picts/CoGe-logo.png'>
-  <TD><h1><TMPL_VAR NAME=TITLE></h1>
- </TR>
+  <TD>User Name:
+  <TD><input class="backbox" type="text" name="uname" id="uname" size="10">
+ <TR>
+  <TD>Password:
+  <TD><input class="backbox" type="password" name="pwd" id="pwd" size="10">
 </TABLE>
+<input type="submit" value="Log on" id="Login" onClick="login(['uname', 'pwd'],[place_cookie])">
+<input type="submit" value="Use Public Login" id="Login" onClick="login(['args__public', 'args__none'],[place_cookie])">
 
-<table width="100%" border="0" cellspacing="0" cellpadding="0" border=0>
- <tr> 
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png">Welcome: <font class="species"><TMPL_VAR NAME=USER></font></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_t.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tr.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr>
-  <td background="/CoGe/picts/table/table_bg_head_l.png">&nbsp;</td>
-  <td background="/CoGe/picts/table/table_bg_body_l.png">&nbsp;</td>
-  <td> 
-<!-- ########################################## -->
-<!-- Main body of the central table goes in here-->
-<!-- ########################################## -->
 
+<TMPL_ELSE>
 <TABLE class="basic" width=100%>
  <TR>
   <TH>
@@ -69,36 +70,5 @@
  </TR>
 </TMPL_LOOP>
 </TABLE>
+</TMPL_IF>
 
-
-
-
- </td>
-  <td  background="/CoGe/picts/table/table_bg_body_r.png">&nbsp;</td>
-  <td  background="/CoGe/picts/table/table_bg_head_r.png">&nbsp;</td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_bl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_br.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr> 
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_bl.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom" background="/CoGe/picts/table/table_bg_head_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_br.png" width="6" height="9"></td>
- </tr>
-</table> 
-
-<HR>
-<DIV>
-<font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE></font>
-</DIV>
-<DIV>
-<font class = "xsmall">Please e-mail Eric Lyons (elyons(@t)nature.berkeley.edu) with any comments, questions, or bugs</font>
-</DIV>
-</BODY>
-</HTML>
