changed HTML::Tempalte var name from TABEL_NAME1 to BOX_NAME

--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -2,7 +2,7 @@
  <tr> 
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
   <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique"><TMPL_VAR NAME=TABLE_NAME1></font></td>
+  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique"><TMPL_VAR NAME=BOX_NAME></font></td>
   <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
   <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
  </tr>
