--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -16,11 +16,17 @@
 
 function accn_search_chain(val) {
  minlen = 4;
- kaj.GS('DS_title','');
- kaj.GS('FT_title','');
  if ((val == 1) && (kaj.GS('accn').length > minlen)){
    return;
- } else if (val == 1) {
+ } 
+ kaj.GS('DS_title','');
+ kaj.GS('FT_title','');
+ kaj.GS('accn_list','');	
+ kaj.GS('Source','');	
+ kaj.GS('FeatType','');	
+ kaj.GS('anno','');	
+ if (val == 1) {
+   kaj.GS('DS_title','<font class="loading">Searching. . .</font>');
    accn_search(['accn', "args__"+val],[source_search_chain]); 
  } else if  (kaj.GS('accn').length > minlen) {
    accn_search(['accn', "args__"+val],[source_search_chain]); 
@@ -29,20 +35,32 @@ function accn_search_chain(val) {
 }
 
 function source_search_chain (val) {
+ kaj.GS('DS_title','');
+ kaj.GS('FT_title','');
+ kaj.GS('Source','<font class="loading">Loading. . .</font>');	
+ kaj.GS('FeatType','');	
+ kaj.GS('anno','');	
  if (val) {kaj.GS('accn_list',val);}
  source_search(['accn_select'], [get_types_chain]);
 }
 
 function get_types_chain (val1, val2) {
+ kaj.GS('FT_title','');
+ kaj.GS('FeatType','<font class="loading">Loading. . .</font>');	
+ kaj.GS('anno','');	
  if (val1) {kaj.GS('Source', val1);}
  if (val2) {kaj.GS('DS_title', "Data Version");}	
- get_types(['accn_select', 'infoid'],[get_anno_chain]);	
+ get_types(['accn_select', 'version'],[get_anno_chain]);	
 }
 
 function get_anno_chain (val1, val2) {
+ kaj.GS('anno','<font class="loading">Loading. . .</font>');	
  if (val1) {kaj.GS('FeatType', val1)};
  if (val2) {kaj.GS('FT_title', "Type Name");}
- get_anno(['accn_select', 'infoid', 'Type_name'],['anno']);	
+ as = kaj.G('accn_select');
+ v = kaj.G('version');
+ tn = kaj.G('Type_name');
+ get_anno(['accn_select', 'version', 'Type_name'],['anno']);	
 }
 
 function tiler_setup (html, id)
@@ -67,36 +85,6 @@ function placeanno(stuff) {
 
 
 </SCRIPT>
-<BODY>
-<TABLE>
- <TR>
-  <TD><a href="/CoGe" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a>
-  <TD id="title"><font class="title"><TMPL_VAR NAME=TITLE></font></td>
- </TR>
-</TABLE>
-<DIV id="results" ></DIV>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" border=0>
- <tr> 
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tl.png" width="6" height="23"></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="100%"  background="/CoGe/picts/table/table_bg_head_t.png"><font class="oblique"><TMPL_VAR NAME=TABLE_NAME1></font></td>
-  <td width="6"  background="/CoGe/picts/table/table_bg_head_t.png">&nbsp;</td>
-  <td width="6"><img src="/CoGe/picts/table/table_bg_head_tr.png" width="6" height="23"></td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_t.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_tr.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr>
-  <td background="/CoGe/picts/table/table_bg_head_l.png">&nbsp;</td>
-  <td background="/CoGe/picts/table/table_bg_body_l.png">&nbsp;</td>
-  <td> 
-<!-- ########################################## -->
-<!-- Main body of the central table goes in here-->
-<!-- ########################################## -->
 <TABLE>
  <TR>
   <TD valign=top>
@@ -121,39 +109,3 @@ function placeanno(stuff) {
   if (kaj.GS('accn')) {accn_search_chain(0);};
 </SCRIPT>
 
-
-<!-- ########################################## -->
-<!-- ############END MAIN BODY################# -->
-<!-- ########################################## -->
-
-
-
- </td>
-  <td  background="/CoGe/picts/table/table_bg_body_r.png">&nbsp;</td>
-  <td  background="/CoGe/picts/table/table_bg_head_r.png">&nbsp;</td>
- </tr>
- <tr> 
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_head_l.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_bl.png" width="6" height="9"></td>
-  <td height="9" valign="top" background="/CoGe/picts/table/table_bg_body_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="top"><img src="/CoGe/picts/table/table_bg_body_br.png" width="6" height="9"></td>
-  <td height="9" valign="top" width="6" background="/CoGe/picts/table/table_bg_head_r.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
- </tr>
- <tr> 
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_bl.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom" background="/CoGe/picts/table/table_bg_head_b.png"><img src="/CoGe/picts/table/spacer-1x1.png"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_b.png" width="6" height="9"></td>
-  <td height="9" valign="bottom"><img src="/CoGe/picts/table/table_bg_head_br.png" width="6" height="9"></td>
- </tr>
-</table> 
-
-
-<br>
-<HR>
-<DIV>
-<font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE></font>
-</DIV>
-<script language="JavaScript" type="text/javascript" src="/CoGe/js/menu.js"></script>
-</BODY>
-</HTML>
