--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -5,6 +5,8 @@
  <link rel="stylesheet" type="text/css" href="/CoGe/css/sddm.css" />
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/kaj.stable.js"></SCRIPT>
+<script language="JavaScript" type="text/javascript" src="/CoGe/js/menu.js"></script>
 <SCRIPT language="JavaScript">
 function submitform() {
   document.main_form.submit();
@@ -51,6 +53,13 @@ function get(id){
     return document.getElementById(id);
 }
 
+function feat_search_chain(val, num) {
+ if (val) {
+  kaj.GS('source'+num, val);
+  feat_search(['accn'+num,'infoid'+num, 'args__'+num],['feat'+num]);
+ }
+}
+
 </SCRIPT>
 <BODY onload="setup()" >
 <TABLE>
@@ -61,7 +70,7 @@ function get(id){
 </TABLE>
 <DIV id="results" ></DIV>
 <input type="button" value="GO"
-onClick="source_search(['accn1','args__1'],['org1']); source_search(['accn2','args__2'],['org2']); loading([], ['results']); run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
+onClick="loading([], ['results']); run(['accn1', 'accn2', 'featid1', 'featid2', 'dr1up', 'dr1down', 'dr2up', 'dr2down', 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up', 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1', 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize', 'gapopen', 'gapextend', 'mismatch', 'blastparams','iw','ih', 'feat_h'],['results'], 'POST');"
 >   &nbsp;&nbsp;
 
 
@@ -112,13 +121,14 @@ onClick="source_search(['accn1','args__1'],['org1']); source_search(['accn2','ar
    <DIV class="dropMenu">
      <DIV class="subMenu" style="display:inline;">
      <TABLE style="width: 100%;">
-      <TR>
+      <TR valign="top">
       <TD>
       <TABLE>
-       <TR>
+       <TR valign="top">
         <TD>Name:
-        <TD><input class="backbox" type="text" name="accn1" id="accn1" tabindex="1"  size="20" onBlur="source_search(['accn1','args__1'],['org1'])" value="<TMPL_VAR NAME=ACCN1>" />
-        <DIV id="org1"><input type="hidden" id="infoid1"></DIV>
+        <TD><input class="backbox" type="text" name="accn1" id="accn1" tabindex="1"  size="20" onBlur="source_search(['accn1','args__1'],[feat_search_chain])" value="<TMPL_VAR NAME=ACCN1>" />
+        <DIV id="source1"><input type="hidden" id="infoid1"></DIV>
+        <DIV id="feat1"><input type="hidden" id="featid1"></DIV>
        <TR>
        <TD><DIV class="small">Upstream:</DIV>
        <TD><DIV  id="up1" ><input class="backbox" type="text" name="dr1up" id="dr1up" tabindex="1" size="10" value="10000" /> </DIV>
@@ -130,10 +140,11 @@ onClick="source_search(['accn1','args__1'],['org1']); source_search(['accn2','ar
       </TABLE>
       <TD>
       <TABLE>
-       <TR>
+       <TR valign="top">
         <TD>Name:
-        <TD><input class="backbox" type="text" name="accn2" id="accn2" tabindex="1"  size="20" onBlur="source_search(['accn2','args__2'],['org2'])" value="<TMPL_VAR NAME=ACCN2>" />
-        <DIV id="org2"><input type="hidden" id="infoid2"></DIV>
+        <TD><input class="backbox" type="text" name="accn2" id="accn2" tabindex="1"  size="20" onBlur="source_search(['accn2','args__2'],[feat_search_chain])" value="<TMPL_VAR NAME=ACCN2>" />
+        <DIV id="source2"><input type="hidden" id="infoid2"></DIV>
+        <DIV id="feat2"><input type="hidden" id="featid2"></DIV>
        <TR>
        <TD><DIV class="small">Upstream:</DIV>
        <TD><DIV  id="up2" ><input class="backbox" type="text" name="dr2up" id="dr2up" tabindex="1" size="10" value="10000" /></DIV>
@@ -562,9 +573,11 @@ onClick="source_search(['accn1','args__1'],['org1']); source_search(['accn2','ar
 </table> 
 
 <input type="button" value="GO"
-onClick="source_search(['accn1','args__1'],['org1']);
-source_search(['accn2','args__2'],['org2']); loading([], ['results']);
-run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down',
+onClick="
+//source_search(['accn1','args__1'],['org1']);
+//source_search(['accn2','args__2'],['org2']); 
+loading([], ['results']);
+run(['accn1', 'accn2', 'featid1', 'featid2', 'dr1up', 'dr1down', 'dr2up', 'dr2down',
 'infoid1', 'infoid2', 'gbaccn1', 'gbaccn2', 'gb1start', 'gb1up',
 'gb1down', 'gb2start', 'gb2up', 'gb2down', 'seq1', 'seq2', 'comp1',
 'comp2', 'matchfilter', 'spike', 'mask', 'mask_ncs', 'wordsize',
@@ -581,7 +594,6 @@ run(['accn1', 'accn2', 'dr1up', 'dr1down', 'dr2up', 'dr2down',
 <DIV>
 <font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE></font>
 </DIV>
-<script language="JavaScript" type="text/javascript" src="/CoGe/js/menu.js"></script>
 </form>
 </BODY>
 </HTML>
