added vars called pre and post box

--- a/web/tmpl/generic_page.tmpl
+++ b/web/tmpl/generic_page.tmpl
@@ -1,3 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
+<TMPL_VAR NAME="PREBOX">
 <TMPL_INCLUDE NAME="box.tmpl">
+<TMPL_VAR NAME="POSTBOX">
 <TMPL_INCLUDE NAME="footer.tmpl">
