correct error in declaring tmpl_var for body

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -8,7 +8,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </HEAD>
 
-<BODY TMPL_VAR NAME=BODY_TAG>
+<BODY <TMPL_VAR NAME=BODY_TAG>>
 <TABLE>
  <TR>
   <TD><a href="/CoGe" border=0><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a>
