--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -49,8 +49,8 @@ function get_types_chain (val1, val2) {
  kaj.GS('FeatType','<font class="loading">Loading. . .</font>');	
  kaj.GS('anno','');	
  if (val1) {kaj.GS('Source', val1);}
- if (val2) {kaj.GS('DS_title', "Data Version");}	
- get_types(['accn_select', 'version'],[get_anno_chain]);	
+ if (val2) {kaj.GS('DS_title', "Dataset");}	
+ get_types(['accn_select', 'dsid'],[get_anno_chain]);	
 }
 
 function get_anno_chain (val1, val2) {
@@ -58,9 +58,9 @@ function get_anno_chain (val1, val2) {
  if (val1) {kaj.GS('FeatType', val1)};
  if (val2) {kaj.GS('FT_title', "Type Name");}
  as = kaj.G('accn_select');
- v = kaj.G('version');
+// v = kaj.G('version');
  tn = kaj.G('Type_name');
- get_anno(['accn_select', 'version', 'Type_name'],['anno']);	
+ get_anno(['accn_select', 'Type_name', 'dsid'],['anno']);	
 }
 
 function tiler_setup (html, id)
