--- a/web/tmpl/TreeView.tmpl
+++ b/web/tmpl/TreeView.tmpl
@@ -15,16 +15,25 @@
 Allow overlapping nodes?
 <td>
 <input class="backbox" type ="radio" name = "overlap" id="overlap" value=1 />yes
-<input class="backbox" type ="radio" name = "overlap" id="overlap" value=0 checked/>no</table>
+<input class="backbox" type ="radio" name = "overlap" id="overlap" value=0 checked/>no
+
+<tr>
+<td>
+Tree drawing diection:
+<td>
+<input class="backbox" type ="radio" name = "LR" id="LR" value=1 />Left to Right
+<input class="backbox" type ="radio" name = "LR" id="LR" value=0 checked/>Top to Bottom
+</table>
+
 </DIV>
 <hr>
-<DIV>Please enter key characters (case insensitive) present in taxa names for whose node you wish to color and draw in a specific way:<br>
+<DIV>Please enter key characters (case insensitive) present in taxa names for those nodes you wish to color and draw in a specific way:<br>
 <div class="prep">search_pattern graphviz_node_qualifiers</DIV>
 <DIV>
 <textarea class="backbox" name="nodes" id="nodes" rows="5" cols="80">
 at       shape=rectangle, color=green4, fillcolor="#00FF005f", style=filled 
 os       shape=ellipse, color=cyan4, fillcolor="#00FFFF5F" style=filled
-Chlre    shape=hexagon, color=orange4, fillcolor="#FF66005F" style=filled
+zm       shape=hexagon, color=orange4, fillcolor="#FF66005F" style=filled
 </textarea></DIV>
 <input type = "submit" name="GO" value="GO">
 </FORM>
@@ -35,20 +44,24 @@ Chlre    shape=hexagon, color=orange4, fillcolor="#FF66005F" style=filled
 <TMPL_ELSE>
 <table>
 <tr>
-<td><div><input type="submit" value="zoom in (x20)" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod', 'args__19'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom in (x10)" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod', 'args__9'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom in (x5)" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod', 'args__4'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom in" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom out" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom out (x5)" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__-4'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom out (x10)" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__-9'],['img', 'im', 'zi', 'zo'])"></DIV> 
-<td><div><input type="submit" value="zoom out (x20)" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__-19'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom in (x20)" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod', 'args__19', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom in (x10)" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod', 'args__9', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom in (x5)" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod', 'args__4', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom in" id="zoom-in" onClick="zoom(['zoi', 'tfile', 'mod','args__0', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom out" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__0', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom out (x5)" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__-4', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom out (x10)" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__-9', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
+<td><div><input type="submit" value="zoom out (x20)" id="zoom-out" onClick="zoom(['zoo', 'tfile', 'mod', 'args__-19', 'rooted', 'overlap', 'LR'],['img', 'im', 'zi', 'zo'])"></DIV> 
 </table>
 <div id="zi"><input type="hidden" id="zoi" value=1></div>
 <div id="zo"><input type="hidden" id="zoo" value=-1></div>
 
 <div id=""><input type="hidden" id="mod" value='<TMPL_VAR NAME="mod">'></div>
 <div id="file"><input type="hidden" id="tfile" name="tfile" value=<TMPL_VAR NAME="tfile">></div>
+<div id="file"><input type="hidden" id="rooted" name="rooted" value=<TMPL_VAR NAME="ROOTED">></div>
+<div id="file"><input type="hidden" id="overlap" name="overlap" value=<TMPL_VAR NAME="OVERLAP">></div>
+<div id="file"><input type="hidden" id="LR" name="LR" value=<TMPL_VAR NAME="LR">></div>
+
 <div id="img"><TMPL_VAR NAME="IMG"></div>
 <div id="im"><TMPL_VAR NAME="IMGMAP"></div>
 <DIV class = small><a href = <TMPL_VAR NAME="tree_file"> >Tree file</a></DIV>
