changed font size

--- a/web/tmpl/GeLo.tmpl
+++ b/web/tmpl/GeLo.tmpl
@@ -128,6 +128,6 @@ Dataset: <font class="species"><TMPL_VAR NAME=DS></font>
 <div id ='info' style='position:relative;left:6px;top:10px;width:800px;height:400px'><FORM NAME="info"></FORM></div>
 </form>
 <br>
-<div>Click on the map to view feature information at that position </div>
-<div>Click and drag the map to move genomic view left and right</div> 
+<div class = "small">Click on the map to view feature information at that position </div>
+<div class = "small">Click and drag the map to move genomic view left and right</div> 
 </TMPL_IF>
